08-Ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
