08-Ingress/service.yml
#Ingress works with clusterIp, not nodeport
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: nginx
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
